--- a/01_TitanicEDA.ipynb
+++ b/01_TitanicEDA.ipynb
@@ -2328,7 +2328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 14,
    "id": "60143a91",
    "metadata": {},
    "outputs": [
@@ -2336,7 +2336,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "📂 Dossier actuel : c:\\Users\\HomeAdmin\\OneDrive\\__STEPHANE\\_Projets Python\\Titanic\n",
+      "📂 Dossier actuel : c:\\_DEV\\Learning Projects\\titanic-survival-prediction\n",
       "✅ Dataset nettoyé sauvegardé : data/train_cleaned.csv\n"
      ]
     }
@@ -2365,7 +2365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 15,
    "id": "06a718a2",
    "metadata": {},
    "outputs": [
@@ -2711,7 +2711,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 16,
    "id": "ab9f48b5",
    "metadata": {},
    "outputs": [
@@ -2739,7 +2739,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 17,
    "id": "f0575c0e",
    "metadata": {},
    "outputs": [
@@ -3007,7 +3007,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 18,
    "id": "2ec40957",
    "metadata": {},
    "outputs": [
@@ -4324,7 +4324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 19,
    "id": "f08a0905",
    "metadata": {},
    "outputs": [
@@ -4368,7 +4368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 20,
    "id": "15bba3d0",
    "metadata": {},
    "outputs": [
@@ -4415,7 +4415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 21,
    "id": "92d61702",
    "metadata": {},
    "outputs": [
@@ -4425,7 +4425,7 @@
        "Text(0.5, 1.0, 'Distribution des tarifs (Fare)')"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -4449,7 +4449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 22,
    "id": "27aaa76f",
    "metadata": {},
    "outputs": [
@@ -4469,7 +4469,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\HomeAdmin\\AppData\\Local\\Temp\\ipykernel_7232\\157148611.py:8: FutureWarning:\n",
+      "C:\\Users\\HomeAdmin\\AppData\\Local\\Temp\\ipykernel_25804\\157148611.py:8: FutureWarning:\n",
       "\n",
       "The default of observed=False is deprecated and will be changed to True in a future version of pandas. Pass observed=False to retain current behavior or observed=True to adopt the future default and silence this warning.\n",
       "\n"
@@ -4489,7 +4489,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 23,
    "id": "9a421bb7",
    "metadata": {},
    "outputs": [
@@ -4499,7 +4499,7 @@
        "<Axes: title={'center': 'Distribution des âges'}, ylabel='Frequency'>"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -4521,7 +4521,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "id": "e9524380",
    "metadata": {},
    "outputs": [
@@ -4542,7 +4542,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\HomeAdmin\\AppData\\Local\\Temp\\ipykernel_7232\\4003600034.py:7: FutureWarning:\n",
+      "C:\\Users\\HomeAdmin\\AppData\\Local\\Temp\\ipykernel_25804\\1777518436.py:7: FutureWarning:\n",
       "\n",
       "The default of observed=False is deprecated and will be changed to True in a future version of pandas. Pass observed=False to retain current behavior or observed=True to adopt the future default and silence this warning.\n",
       "\n"
@@ -4575,7 +4575,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4595,7 +4595,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 25,
    "id": "c83f0a48",
    "metadata": {},
    "outputs": [
@@ -4619,7 +4619,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 26,
    "id": "f5b2e642",
    "metadata": {},
    "outputs": [
@@ -4796,7 +4796,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 27,
    "id": "580c4dee",
    "metadata": {},
    "outputs": [
@@ -4813,11 +4813,11 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\HomeAdmin\\AppData\\Local\\Temp\\ipykernel_7232\\2203804046.py:29: FutureWarning:\n",
+      "C:\\Users\\HomeAdmin\\AppData\\Local\\Temp\\ipykernel_25804\\2203804046.py:29: FutureWarning:\n",
       "\n",
       "The default of observed=False is deprecated and will be changed to True in a future version of pandas. Pass observed=False to retain current behavior or observed=True to adopt the future default and silence this warning.\n",
       "\n",
-      "C:\\Users\\HomeAdmin\\AppData\\Local\\Temp\\ipykernel_7232\\2203804046.py:29: FutureWarning:\n",
+      "C:\\Users\\HomeAdmin\\AppData\\Local\\Temp\\ipykernel_25804\\2203804046.py:29: FutureWarning:\n",
       "\n",
       "The default of observed=False is deprecated and will be changed to True in a future version of pandas. Pass observed=False to retain current behavior or observed=True to adopt the future default and silence this warning.\n",
       "\n"
@@ -4912,7 +4912,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 28,
    "id": "f372e776",
    "metadata": {},
    "outputs": [
